# OCaml99Exercises

./: OCaml99Exercises.opam  README.md  dune-project
_build/: .db  .digest-db  log
_build/default/: OCaml99Exercises.dune-package
_build/default/.dune/: configurator  configurator.v2
_build/default/lib/: OCaml99Exercises.cma  OCaml99Exercises.cmxa  OCaml99Exercises.cmxs
_build/default/lib/.OCaml99Exercises.objs/byte/: oCaml99Exercises.cmi  oCaml99Exercises.cmo  oCaml99Exercises.cmt
_build/default/lib/.OCaml99Exercises.objs/native/: oCaml99Exercises.cmx
_build/default/lib/.merlin-conf/: lib-OCaml99Exercises
_build/default/test/.merlin-conf/: exe-test_OCaml99Exercises
_build/default/test/.test_OCaml99Exercises.eobjs/byte/: dune__exe__Test_OCaml99Exercises.cmi  dune__exe__Test_OCaml99Exercises.cmti
_build/default/test/.test_OCaml99Exercises.eobjs/native/: dune__exe__Test_OCaml99Exercises.cmx
_build/install/default/lib/OCaml99Exercises/: META  dune-package  opam
lib/: dune
test/: dune
